Fix trailer z-index

--- a/src/app/common-components/show-preview/show-preview.component.scss
+++ b/src/app/common-components/show-preview/show-preview.component.scss
@@ -63,6 +63,7 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.6);
+	z-index: 10;
 }
 
 #overview {
